<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:gravity="center"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_login_result"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textColor="#009dff"
        android:textSize="@dimen/font_ll"
        tools:text="Login Success!"/>

    <TableRow
        android:layout_margin="5dp"
        android:background="@drawable/bg_input_box"
        android:padding="10dp">

        <TextView
            style="@style/tv_login"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/et_username"
            style="@style/et_login"/>
    </TableRow>

    <TableRow
        android:layout_margin="5dp"
        android:background="@drawable/bg_input_box"
        android:padding="10dp">

        <TextView
            style="@style/tv_login"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_password"
            style="@style/et_login"
            android:inputType="textPassword"/>
    </TableRow>

    <Button
        android:id="@+id/btn_submit"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/submit"
        android:textColor="#FFF"/>
</TableLayout>
